--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,8 +62,6 @@ nav a:hover {
 .container {
   width: 100%;
   max-width: 960px;
-  /* width: 600px;
-  max-width: 100%; */
   margin: 0 auto;
   clear: both;
 }
@@ -214,7 +212,6 @@ h3,
   width: 274px;
   margin: 20px 0 25px;
   overflow:auto;
-  /* width: 300px; */
 }
 
 .work:nth-child(even) {
@@ -307,15 +304,13 @@ input[type=submit] {
 }
 
 .work {
-  width: 100%;
+  position: relative;
+  float:left;
+  width: 410px;
   margin: 20px 0 25px;
   overflow:auto;
-  /* width: 300px; */
-}
-
-
-
   }
+}
  
 /* width less than 768px  */
 @media screen and (max-width: 768px) {
@@ -332,11 +327,13 @@ input[type=submit] {
     margin-left: 20px;
   }
   
-  .work {
-    width: 40%;
-    margin: 20px 0 25px;
-    overflow:auto;
-    /* width: 300px; */
+ 
+.work {
+  position: relative;
+  float:left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow:auto;
   }
 }
 
